# unnamed_model

./: README.md  configurator.py  pyproject.toml  pyproject_macos.toml
data/c4/: prepare.py
data/mixed/: prepare.py
data/openwebtext/: prepare.py
data/wikipedia/: prepare.py
src/port_nanogpt/: __init__.py  __main__.py  attention.py  bench.py  inference.py  layers.py  model.py  sample.py  train.py  tuner.py
